--- a/_includes/about.html
+++ b/_includes/about.html
@@ -19,11 +19,11 @@ When you are building the house of your dreams, you want it to be a pleasant tra
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    </div>
+                                    <h4 class="subheading">Our Mission</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">“We are dedicated to providing clients with easy, efficient access to home design and architecture knowledge together with Indian craftsmanship, and high-quality industrial design. Our main goal is to inspire people with Modern beauty and provide the service such as the Best Interior Designers.”</p>
                                 </div>
                             </div>
                         </li>
@@ -33,11 +33,11 @@ When you are building the house of your dreams, you want it to be a pleasant tra
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                     </div>
+                                    <h4 class="subheading">Quality</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Good quality will save the world in time. Vitruvio’s team of professionals invest their time and diligence to complete a project, resulting in exceptional quality. Made in India furniture and furnishings have been perfected to high standards of quality and durability. This will allow your interiors to withstand the test of time both sustainably and with style.</p>
                                 </div>
                             </div>
                         </li>
@@ -47,11 +47,11 @@ When you are building the house of your dreams, you want it to be a pleasant tra
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                     </div>
+                                    <h4 class="subheading">Integrity</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Respect and reliability are the cornerstones founding and leading our customer service practices. This integrity is important in establishing the trust and confidence necessary to design your home interiors. Vitruvio Groups will treat your home as its own, a very important concept of comfort culture, as their customers come before everything else.</p>
                                 </div>
                             </div>
                         </li>
@@ -61,11 +61,11 @@ When you are building the house of your dreams, you want it to be a pleasant tra
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                     </div>
+                                    <h4 class="subheading">Beauty</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">As one of the founding pillars, beauty always wins. Whether it’s an Construction project or interior design, Vitruvio Groups pursues beauty in all activities. Beauty is something that should surround your vision and other senses. The objective of Vitruvio Groups is to share this beauty with the world through Construction & interior Services.</p>
                                 </div>
                             </div>
                         </li>
