--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum shameer dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"> You will be impressed bu our proffessionalism, The accuracy of the provided information,Our Prices and Our Reasonnable Time frames.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -13,33 +13,49 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">STRUCTURAL</h4>
+                    <p class="text-muted">Architectural Plans / Engineering Service. Our Team has Extensive Experience In providing Strategic, Financial and operational advice as well as in complete design Architectural Plans.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">CONSTRUCTION CONTRACTOR </h4>
+                    <p class="text-muted">Our team is specialized in the planning and implementation of high-end architecture projects using made in India furnishings and providing end-to-end solutions. We are Specialist in Both Commercial & Residential Projects such as Villa’s & Home Projects.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">INTERIOR DESIGN</h4>
+                    <p class="text-muted">Our team of designers and architects provide a combination of knowledge and skills for the design of unique spaces with fine finishes, focusing on the use of exclusive materials. Our service does not stop at the design phase, in fact our experienced project managers follow the customer also during the implementation and management of the site, offering turnkey solutions.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">RENOVATION</h4>
+                    <p class="text-muted">VG Team undertake Renovation Projects of Construction, Interior Service of Both Commercial and Residential Projects. Forward thinking, we are always on the lookout for new trends with a team of interior designers whose mission is to create unique and personalized pieces.</p>
                 </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">EXPANSION</h4>
+                    <p class="text-muted">Vitruvio Groups Construction offers a certified and guaranteed service.  Your project will be completed while respecting the Indian standards and achieved by a team of professionals who create a lasting work in no time. By choosing VG Construction for your expansion work, you will receive a unique service. The result will be as you imagined it. You can follow your project with our construction stages. You will have a plan and specifications, a schedule of the contract, a signed contract as well as qualified subcontractors and workers that respects to the building.</p>
             </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">FURNITURE DESIGN</h4>
+                    <p class="text-muted">The Vitruvio Groups Interior Design approach has been perfected through over 5 years of business, yet is still unique to each project.  Repetition is not in our design vocabulary - we believe that every home should be customized by design and functionality to fit each family's needs...</p>
+                </div>
+            </div>   
         </div>
     </section>
