--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted"> You will be impressed bu our proffessionalism, The accuracy of the provided information,Our Prices and Our Reasonnable Time frames.</h3>
+                    <h3 class="section-subheading text-muted"> You will be impressed by our proffessionalism, The accuracy of the provided information,Our Prices and Our Reasonnable Time frames.</h3>
                 </div>
             </div>
             <div class="row text-center">
