--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,10 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h4 class="section-subheading"> The Vitruvio Groups project began in 2016, among some  interior designers, with an idea to find an easier way of sharing Indians know-how and Made in India. The same services available to the local market and few incoming foreign clients needed to evolve and expand. Construction and interior architecture design company that specialist in Commercial and residential Projects. Founded in Bengaluru by Asif Munavar in 2016.The internet has removed boundaries between continents, making knowledge and product sharing easier and faster. 
-
-When you are building the house of your dreams, you want it to be a pleasant transition. So the practice creates individual interiors inspired by the culture and nature of the location, by the travels of the team and by the artisans with whom they work. We specialize in sustainable principals and have most notably been recognized for our law firm office interior design work. Its innovative architecture, interior design and products firm specializes in hi-end residential, hospitality and home product design. the completion of a project consistently provides our clients with homes that exceed their expectations. Our passion is minimizing our impact on the natural environment while maximizing the impact on our clients' built environment.
-.</h4>
+                    <h4 class="section-subheading">Vitruvio Groups is an Enterprise that offers and specializes in Creative Design. Architecture and Interior design company that specialist in Commercial and Residential Project service  since 2016, Founded at Bengaluru by Asif Munavar. We Have also worked for Hospitals, Fitness Gym, Restaurants, Commercial kitchen, Office workstations, Art galleries, Villas, Apartment’s and Independent House.</h4>
                 </div>
             </div>
             <div class="row">
