--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,20 +18,26 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                     <li>
+                        <a class="page-scroll" href="#HOME">Services</a>
+                    </li>
+                     <li>
+                        <a class="page-scroll" href="#PROJECT">Services</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#ABOUT">Services</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#SERVICES">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#TEAM">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#PORTFOLIO">Team</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#CONTACT">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -44,9 +50,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Vitruvio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-lead-in">Vitruvio Groups approach is unique, it aims to build a Long-term relationship with its clients. Maintaining Your Home is essential to preserve its value and we work with you to assist with your projects in order to make your Dream reality.</div>
+                <div class="intro-heading">VIEW PROJECT</div>
+                <a href="#PROJECT" class="page-scroll btn btn-xl">VIEW PROJECT</a>
             </div>
         </div>
     </header>
