--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Vitruvio Groups approach is unique, it aims to build a Long-term relationship with its clients. Maintaining Your Home is essential to preserve its value and we work with you to assist with your projects in order to make your Dream reality.</div>
-                <div class="intro-heading">VIEW PROJECT</div>
+                <div class="intro-heading"></div>
                 <a href="#PROJECT" class="page-scroll btn btn-xl">VIEW PROJECT</a>
             </div>
         </div>
