--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,25 +19,25 @@
                         <a href="#page-top"></a>
                     </li>
                      <li>
-                        <a class="page-scroll" href="#HOME">Services</a>
+                        <a class="page-scroll" href="#HOME">HOME</a>
                     </li>
                      <li>
-                        <a class="page-scroll" href="#PROJECT">Services</a>
+                        <a class="page-scroll" href="#PROJECT">PROJECT</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#ABOUT">Services</a>
+                        <a class="page-scroll" href="#ABOUT">ABOUT</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#SERVICES">Portfolio</a>
+                        <a class="page-scroll" href="#SERVICES">SERVICES</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#TEAM">About</a>
+                        <a class="page-scroll" href="#TEAM">TEAM</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#PORTFOLIO">Team</a>
+                        <a class="page-scroll" href="#PORTFOLIO">PORTFOLIO</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#CONTACT">Contact</a>
+                        <a class="page-scroll" href="#CONTACT">CONTACT</a>
                     </li>
                 </ul>
             </div>
@@ -50,7 +50,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Vitruvio Groups approach is unique, it aims to build a Long-term relationship with its clients. Maintaining Your Home is essential to preserve its value and we work with you to assist with your projects in order to make your Dream reality.</div>
+                <div class="intro-lead-in">TRANSFORMING SPACE INTO LIVING CONCEPTS</div>
                 <div class="intro-heading"></div>
                 <a href="#PROJECT" class="page-scroll btn btn-xl">VIEW PROJECT</a>
             </div>
