--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,14 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include HOME.html %}
-    {% include PROJECT.html %}
-    {% include ABOUT.html %}    
-    {% include SERVICES.html %}
-    {% include TEAM.html %}
+    {% include home.html %}
+    {% include project.html %}
+    {% include about.html %}    
+    {% include services.html %}
+    {% include team.html %}
     {% include portfolio_grid.html %}
     {% include clients.html %}
-    {% include CONTACT.html %}
+    {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
